升级组件，使用Remoting，新版星尘提供基于服务器时间的时间提供者，避免Cron定时任务因本地时间有偏差而执行偏差较大

--- a/A4Flower/A4Flower.csproj
+++ b/A4Flower/A4Flower.csproj
@@ -20,8 +20,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NewLife.Core" Version="10.6.2024.101" />
-    <PackageReference Include="NewLife.Stardust" Version="2.9.2024.101" />
+    <PackageReference Include="NewLife.Core" Version="10.10.2024.718-beta0517" />
+    <PackageReference Include="NewLife.Stardust" Version="3.0.2024.718-beta0535" />
   </ItemGroup>
 
 </Project>
